This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

13-Oct-2007 (Lars Duening)
  - (interpret, simulate.c) Changed the apply cache counters to 'unsigned
       long' to reduce the possibility of an overflow (Bug #520).

07-Oct-2007 (Lars Duening)
  - (comm.c) When in charmode, don't attempt to read in as much data
       as the buffer has left space: otherwise the handling of such an
       'overlong command' confuses the charmode engine and causes the socket
       to close prematurely. Yes, this is more a workaround than a real fix
       (Bug #442).
  - (simulate, interpret) The value thrown in a catch is now held in
       the catch context could be leaked if a second error happens and
       is caught in the master::runtime_error() handler (Bug #513).
  - (configure) When testing for libiconv, reference a real libiconv method.
       This catches situations where libiconv exists, but is of the
       wrong architecture.

06-Oct-2007 (Lars Duening)
  - (configure) gentoo Linux requires the '-n' argument for 'tail +2' to
       work correctly (thanks, Juanjo!).
  - (comm.c) Removed a crasher when running with --check-refcounts: References
       by snooping non-interactives weren't counted (Bug #492).
  - (sprintf.c) Removed a 64-bit issue (comparison of two values with
      differing value ranges) (Bug #490)
  - (prolang.y) upd_long() and read_long() weren't 64-bit-safe (even though
       ins_long() already was) (Bug 491).
  - (prolang.y) With the corrections to the inheritance handling done some
       time ago, the lfuns backing inline closure can be again made 'private
       nomask' (Bug #511).
  - (simulate.c) load_object(): The object filename to load must not be
       empty (Bug #500).
  - (mstrings, obtable.c) Made sure that otable uses the same hasher
       as mstring (Bug #500).
  - (object, simulate.c) clone_object(): When initializing a clone's variables